; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_handle.c_destroy_handle_table.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_handle.c_destroy_handle_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.handle_table = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64* }

@.str = private unnamed_addr constant [14 x i8] c"(lpTable=%p)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @destroy_handle_table(%struct.handle_table* %0) #0 {
  %2 = alloca %struct.handle_table*, align 8
  store %struct.handle_table* %0, %struct.handle_table** %2, align 8
  %3 = load %struct.handle_table*, %struct.handle_table** %2, align 8
  %4 = call i32 @TRACE(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), %struct.handle_table* %3)
  %5 = call i32 (...) @GetProcessHeap()
  %6 = load %struct.handle_table*, %struct.handle_table** %2, align 8
  %7 = getelementptr inbounds %struct.handle_table, %struct.handle_table* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @HeapFree(i32 %5, i32 0, i32 %8)
  %10 = load %struct.handle_table*, %struct.handle_table** %2, align 8
  %11 = getelementptr inbounds %struct.handle_table, %struct.handle_table* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64*, i64** %14, align 8
  %16 = getelementptr inbounds i64, i64* %15, i64 0
  store i64 0, i64* %16, align 8
  %17 = load %struct.handle_table*, %struct.handle_table** %2, align 8
  %18 = getelementptr inbounds %struct.handle_table, %struct.handle_table* %17, i32 0, i32 0
  %19 = call i32 @DeleteCriticalSection(%struct.TYPE_4__* %18)
  ret void
}

declare dso_local i32 @TRACE(i8*, %struct.handle_table*) #1

declare dso_local i32 @HeapFree(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @DeleteCriticalSection(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
